--- a/frontend/index.html
+++ b/frontend/index.html
@@ -139,26 +139,21 @@
       <div class="modal-body">
           <form name="submit_hash">
           <div class="form-group">
-              <label>Cryptographic Hash:</label>
-              <input type="text" class="form-control" name="hash_to_break" aria-describedby="hashHelp" placeholder="Hash">
-              </br>
-              <label>Hash type:</label>
-              <select ng-options="hashType as hashType.name for hashType in hashTypes " ng-model="selectedItem" ng-change="update()" ng-init="selectedItem=hashTypes[0]"></select>
-              <!-- <select class="form-control" name="hash_type" aria-describedby="hashHelp">
-                  <option>sha256</option>
-                  <option>sha3</option>
-                  <option>Ethereum Wallet</option>
-              </select> -->
-              <input ng-if="selectedItem.file == 1" type="file" class="form-control" name="inputFile" aria-describedby="inputFile" placeholder="inputFile">
+            <label>Hash type:</label>
+            <select ng-options="hashType as hashType.name for hashType in hashTypes " ng-model="selectedItem" ng-change="update()" ng-init="selectedItem=hashTypes[0]"></select>
+            </br>  
+            <label ng-show="selectedItem.file != 1">Cryptographic Hash:</label>
+            <input ng-show="selectedItem.file != 1" type="text" class="form-control" ng-model="inputHash" ng-init="inputHash=''" aria-describedby="hashHelp" placeholder="Hash">
+            <input ng-show="selectedItem.file == 1" type="file" class="form-control" fileread="$parent.inputFile">
 
-              </br>
-              <label>Price (In Ether):</label>
-              <input type="number" value="0.1" min="0" step="0.01" data-number-to-fixed="2" data-number-stepfactor="100" class="form-control currency" name="price" />      
-            </form>
+            </br>
+            <label>Price (In Ether):</label>
+            <input type="number" value="0.1" min="0" step="0.01" ng-model="inputPrice" ng-init="inputPrice=0.1" data-number-to-fixed="2" data-number-stepfactor="100" class="form-control currency" name="price" />      
+          </form>
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-        <button type="button" class="btn btn-primary"  ng-click="pay()">Start!</button>
+        <button type="button" class="btn btn-primary"  ng-click="requestHashCrack()">Start!</button>
       </div>
     </div>
   </div>
