--- a/frontend/index.html
+++ b/frontend/index.html
@@ -103,7 +103,7 @@
                   <table ng-table="vm.tableParams" class="table" show-filter="true">
                     <tr class="title">
                       <td>Bounty</td>
-                      <td>Encryption</td>
+                      <td>Type</td>
                       <td>Hash</td>
                       <td>Status</td>
                       <td></td>
