--- a/frontend/index.html
+++ b/frontend/index.html
@@ -157,7 +157,7 @@
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-        <button type="button" class="btn btn-primary"  ng-click="requestHashCrack()">Start!</button>
+        <button type="button" class="btn btn-primary"  ng-click="requestHashBounty()">Start!</button>
       </div>
     </div>
   </div>
